// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout layout 里如果有 aside 就会增加一个has-aside className 1`] = `
<section
  className="merry-layout"
>
  <section
    className="merry-layout"
  >
    <aside
      className="merry-layout-aside"
    />
  </section>
</section>
`;

exports[`layout 是一个aside 1`] = `
<aside
  className="merry-layout-aside"
/>
`;

exports[`layout 是一个footer 1`] = `
<footer
  className="merry-layout-footer"
/>
`;

exports[`layout 是一个header 1`] = `
<header
  className="merry-layout-header"
/>
`;

exports[`layout 是一个main 1`] = `
<main
  className="merry-layout-content"
/>
`;

exports[`layout 是一个section 1`] = `
<section
  className="merry-layout"
/>
`;
